--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@ locale                   : "en-US"
 title                    : "ksm200200"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "KIM SUN MIN"
+name                     : "YOUT NAME"
 description              : "An amazing website."
 url                      : "https://ksm200200.github.io"
 baseurl                  : # the subpath of your site, e.g. "/blog"
