--- a/_config.yml
+++ b/_config.yml
@@ -15,19 +15,19 @@
 minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
-locale                   : "en-US"
-title                    : "ksm200200"
+locale                   : "ko-KR"
+title                    : "공부기록하는 대학생"
 title_separator          : "-"
 subtitle                 : # site tagline that appears below site title in masthead
-name                     : "YOUT NAME"
-description              : "An amazing website."
-url                      : "https://ksm200200.github.io"
+name                     : "김선민"
+description              : "공부 기록용"
+url                      : "https://ksm200200.com" #Github 호스트 주소
 baseurl                  : # the subpath of your site, e.g. "/blog"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
-masthead_title           : # overrides the website title displayed in the masthead, use " " for no title
-# breadcrumbs            : false # true, false (default)
+masthead_title           : "공부기록 블로그"
+breadcrumbs              : true # 다국어 지원 가능
 words_per_minute         : 200
 comments:
   provider               : # false (default), "disqus", "discourse", "facebook", "staticman", "staticman_v2", "utterances", "giscus", "custom"
